tests/snapshots/files__loop_strength_reduction_modified-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 0;
  c1_: int = const 1;
  c2_: int = const 3;
  c3_: int = const 150;
  c4_: int = const 5;
  c5_: int = const 300;
  v6_: int = id c0_;
  v7_: int = id c1_;
  v8_: int = id c0_;
  v9_: int = id c2_;
  v10_: int = id c3_;
  v11_: int = id c4_;
  v12_: int = id c5_;
.b13_:
  v14_: int = mul v11_ v8_;
  print v14_;
  v15_: int = add v6_ v7_;
  v16_: bool = eq v10_ v6_;
  v17_: int = add v7_ v8_;
  v18_: int = id v6_;
  v19_: int = id v7_;
  v20_: int = id v17_;
  v21_: int = id v9_;
  v22_: int = id v10_;
  v23_: int = id v11_;
  v24_: int = id v12_;
  br v16_ .b25_ .b26_;
.b25_:
  v27_: int = add v17_ v9_;
  v18_: int = id v6_;
  v19_: int = id v7_;
  v20_: int = id v27_;
  v21_: int = id v9_;
  v22_: int = id v10_;
  v23_: int = id v11_;
  v24_: int = id v12_;
.b26_:
  v28_: bool = lt v15_ v12_;
  v6_: int = id v15_;
  v7_: int = id v7_;
  v8_: int = id v20_;
  v9_: int = id v9_;
  v10_: int = id v10_;
  v11_: int = id v11_;
  v12_: int = id v12_;
  br v28_ .b13_ .b29_;
.b29_:
  ret;
}
