tests/snapshots/files__loop_unroll-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 0;
  c2_: int = const 1;
  v3_: int = id c1_;
  v4_: int = id c2_;
.b5_:
  v6_: bool = lt v3_ v4_;
  v7_: int = add v3_ v4_;
  v8_: int = select v6_ v7_ v3_;
  v9_: int = select v6_ v4_ v4_;
  v3_: int = id v8_;
  v4_: int = id v9_;
  br v6_ .b5_ .b10_;
.b10_:
  print v3_;
  ret;
}
