tests/snapshots/files__lowbit_br-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
snapshot_kind: text
---
# ARGS: 21324
@main(v0: int) {
  v1_: int = neg v0;
  v2_: int = bitand v0 v1_;
  print v2_;
  ret;
}
