tests/snapshots/files__lowbit_naive-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 21324
@main(v0: int) {
  c1_: int = const 2;
  v2_: int = div v0 c1_;
  v3_: int = mul c1_ v2_;
  v4_: bool = eq v0 v3_;
  c5_: int = const 1;
  v6_: int = id c5_;
  v7_: int = id v0;
  br v4_ .b8_ .b9_;
.b8_:
  v10_: int = id c5_;
  v11_: int = id v0;
.b12_:
  c13_: int = const 2;
  v14_: int = mul c13_ v10_;
  v15_: int = div v11_ c13_;
  v16_: int = div v15_ c13_;
  v17_: int = mul c13_ v16_;
  v18_: bool = eq v15_ v17_;
  v10_: int = id v14_;
  v11_: int = id v15_;
  br v18_ .b12_ .b19_;
.b19_:
  v6_: int = id v10_;
  v7_: int = id v11_;
  print v6_;
  ret;
  jmp .b20_;
.b9_:
  print v6_;
  ret;
.b20_:
}
