tests/snapshots/files__lowbit_naive-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 21324
@main(v0: int) {
  v1_: int = neg v0;
  v2_: int = bitand v0 v1_;
  c3_: int = const 0;
  v4_: bool = eq c3_ v0;
  c5_: int = const 1;
  v6_: int = id c5_;
  v7_: int = id v0;
  br v4_ .b8_ .b9_;
.b8_:
  v10_: int = id c5_;
  v11_: int = id v0;
.b12_:
  c13_: bool = const true;
  v10_: int = id v10_;
  v11_: int = id v11_;
  jmp .b12_;
.b9_:
  print v2_;
  ret;
  ret;
}
